[package]
name = "dectree-rs"
description = "A decision tree implementation in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Clement Wanjau <clementwanjau@gmail.com>"]
readme = "readme.md"
repository = "https://github.com/clementwanjau/dectree-rs"
license-file = "LICENSE"
keywords = ["decision-tree", "bytes-signatures"]
